--- a/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
@@ -1,1 +1,257 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Good) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Good) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1de2614d-82ce-4480-942e-016772cfe823",
+   "metadata": {},
+   "source": [
+    "### Exercise 1\n",
+    "1. Subsetting means selecting something\n",
+    "2. Indexing is a form of subsetting where you select a specific element\n",
+    "3. Slicing is a form of subsetting where you select a series of elements\n",
+    "4. Masking is when you choose to display or not display certain elements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1070813-df69-4933-bd42-7840221cc42b",
+   "metadata": {},
+   "source": [
+    "### Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3e6b4d51-b8c8-4008-8a41-25a2bf74a4e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ba7ce1ba-1192-47d7-9b22-46ac0278915b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1' '3' '2' '4' '5' '7' '6' '8' '10' '9']\n"
+     ]
+    }
+   ],
+   "source": [
+    "np_array_2d = np.array([[1, \"A\"], [3, \"C\"], [2, \"B\"], [4, \"D\"],\n",
+    "                        [5, \"E\"], [7, \"G\"], [6, \"F\"], [8, \"H\"],\n",
+    "                        [10, \"J\"], [9, \"I\"]])\n",
+    "x=np_array_2d\n",
+    "y=x[:,0].copy()\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6d227829-2a3b-4e51-899d-4ee9f112ad63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  3,  2,  4,  5,  7,  6,  8, 10,  9])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cf4b240c-9f8d-43a8-b70b-acd0c104bd1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 0, 0, 1, 1, 0, 0, 0, 1])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.astype(int)%2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5cf21b6b-127f-4bde-b1ce-bddd03c8ab72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True, False, False,  True,  True, False, False, False,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_mask=y.astype(int)%2 != 0\n",
+    "my_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "efc17cc3-26b8-4739-845f-c61620f1fef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['A', 'C', 'E', 'G', 'I'], dtype='<U21')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[:,1][my_mask]   #in the array, 0 index are the numbers and 1 index are the letters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c326d940-749d-458c-af37-779276ad1ec9",
+   "metadata": {},
+   "source": [
+    "### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c36dafe5-56c9-4221-a41b-05c00d1fbd3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=np.array([[66, 50, 57, -1, -1],\n",
+    " [92, -1, 88, -1, -1],\n",
+    " [75, -1, -1, 76, -1],\n",
+    " [-1, 51, 87, -1, -1],\n",
+    " [71, -1, 67, -1, 69]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "8a967aad-69f6-4ecd-bbb0-94271100ef1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[x>50]=1\n",
+    "x[x==50]=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "befc6d7d-91f5-4fa4-a1d9-03277bf7ea9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  0,  1, -1, -1],\n",
+       "       [ 1, -1,  1, -1, -1],\n",
+       "       [ 1, -1, -1,  1, -1],\n",
+       "       [-1,  1,  1, -1, -1],\n",
+       "       [ 1, -1,  1, -1,  1]])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c05e2ac6-16e6-4432-a7b8-ed663ceda38a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
