--- a/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
@@ -15,10 +15,10 @@
    "metadata": {},
    "source": [
     "### Exercise 1\n",
-    "1. Subsetting means selecting something\n",
+    "1. Subsetting means selecting something from a list or array\n",
     "2. Indexing is a form of subsetting where you select a specific element\n",
     "3. Slicing is a form of subsetting where you select a series of elements\n",
-    "4. Masking is when you choose to display or not display certain elements"
+    "4. Masking is when you choose to display or not display certain elements, Python will display those that are deemed 'True'"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3e6b4d51-b8c8-4008-8a41-25a2bf74a4e7",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "ba7ce1ba-1192-47d7-9b22-46ac0278915b",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "6d227829-2a3b-4e51-899d-4ee9f112ad63",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "array([ 1,  3,  2,  4,  5,  7,  6,  8, 10,  9])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "cf4b240c-9f8d-43a8-b70b-acd0c104bd1a",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "array([1, 1, 0, 0, 1, 1, 0, 0, 0, 1])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "5cf21b6b-127f-4bde-b1ce-bddd03c8ab72",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "        True])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,23 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "efc17cc3-26b8-4739-845f-c61620f1fef0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['A', 'C', 'E', 'G', 'I'], dtype='<U21')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A' 'C' 'E' 'G' 'I']\n"
+     ]
     }
    ],
    "source": [
-    "x[:,1][my_mask]   #in the array, 0 index are the numbers and 1 index are the letters"
+    "print(x[:,1][my_mask])  #in the array, 0 index are the numbers and 1 index are the letters"
    ]
   },
   {
@@ -158,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "c36dafe5-56c9-4221-a41b-05c00d1fbd3e",
    "metadata": {},
    "outputs": [],
@@ -172,32 +169,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "id": "8a967aad-69f6-4ecd-bbb0-94271100ef1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "x[x>50]=1\n",
-    "x[x==50]=0"
+    "x[x==50]=0\n",
+    "x[x<50]=-1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "id": "befc6d7d-91f5-4fa4-a1d9-03277bf7ea9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1,  0,  1, -1, -1],\n",
-       "       [ 1, -1,  1, -1, -1],\n",
-       "       [ 1, -1, -1,  1, -1],\n",
-       "       [-1,  1,  1, -1, -1],\n",
-       "       [ 1, -1,  1, -1,  1]])"
+       "array([[-1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1],\n",
+       "       [-1, -1, -1, -1, -1]])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
